<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Edit_DeleteActivity">


        <ImageView
            android:id="@+id/imgvLogo"
            android:layout_width="135dp"
            android:layout_height="131dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/imgUdelp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/txtvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/imgUdelp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgvLogo" />


        <EditText
            android:id="@+id/editTextPersonName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:maxLength="20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtvTitle" />

        <EditText
            android:id="@+id/editTextPersonLastName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_lastName"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:maxLength="20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPersonName" />

        <Spinner
            android:id="@+id/spnGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="24dp"
            android:entries="@array/genders"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPersonLastName" />

        <RadioGroup
            android:id="@+id/rgbDegree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spnGender" >

            <RadioButton
                android:id="@+id/rdbUnfinishedStudies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/text_unfinished_studies"/>

            <RadioButton
                android:id="@+id/rdbUniversityIntern"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/text_university_intern"/>

            <RadioButton
                android:id="@+id/rdbFinishedStudies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/text_finished_studies"/>


        </RadioGroup>

        <CheckBox
            android:id="@+id/ckbRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="116dp"
            android:text="@string/txt_Read"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rgbDegree" />

        <CheckBox
            android:id="@+id/ckbSport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="116dp"
            android:text="@string/txt_Sport"
            app:layout_constraintStart_toEndOf="@+id/ckbRead"
            app:layout_constraintTop_toTopOf="@+id/rgbDegree" />

        <CheckBox
            android:id="@+id/ckbTravel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="116dp"
            android:text="@string/txt_Travel"
            app:layout_constraintStart_toEndOf="@+id/ckbSport"
            app:layout_constraintTop_toTopOf="@+id/rgbDegree" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/stwFinancialAssistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="36dp"
            android:text="@string/text_finalcial_assistance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ckbTravel" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="60dp"
            android:text="@string/btn_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stwFinancialAssistance" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>